# NetworksLab2020HSE

./: .gitignore  README.MD  README.md  build.gradle  settings.gradle
AdBlock/: README.md  block.txt  main.py
crawler/app/: crawler.py  server.py  urls
crawler/app/templates/: crawler.html
gradle/wrapper/: gradle-wrapper.properties
hls_server/: README.md  main.py  video.py
hw04/: README.md  crawl.go  main.go
individual/: .gitignore  README.md  build.gradle  settings.gradle
individual/client/: CMakeLists.txt  client.cpp  client.h  main.cpp  socket_io.cpp  socket_io.h
individual/client/src/main/java/: ClientException.java  ClientSession.java  InPacket.java  Main.java  OutPacket.java
individual/client/src/main/java/fields/: ErrorCode.java  Mode.java  OpCode.java
individual/client/src/main/java/requests/: AckPacket.java  DataPacket.java  ErrorPacket.java  Packet.java  ReadPacket.java  WritePacket.java
individual/server/: CMakeLists.txt  chat.cpp  chat.h  client.cpp  client.h  main.cpp  message.h  server.cpp  server.h  socket_io.cpp  socket_io.h
individual/src/main/java/: Client.java  ClientSession.java  FileReader.java  FileWriter.java  Main.java  PacketFactory.java  Server.java  ServerSession.java  Session.java  TftpAcceptSocket.java  TftpException.java  TftpSocket.java
individual/src/main/java/parameters/: ErrorCode.java  Mode.java  OpCode.java  TftpPacketInfo.java
individual/src/main/java/requests/: AckPacket.java  DataPacket.java  ErrorPacket.java  Packet.java  ReadPacket.java  WritePacket.java
individual/src/main/kotlin/ru/hse/lyubortk/websearch/: main.kt
individual/src/main/resources/: application.conf
individual/vnc/server/: README.md  build.gradle
individual/vnc/server/gradle/wrapper/: gradle-wrapper.properties
simple_chat/: message_format.md  readn.cpp  readn.hpp
simple_chat/client/: CMakeLists.txt  main.cpp
simple_chat/server/: CMakeLists.txt  main.cpp
src/main/kotlin/: Client.kt  Communication.kt  Packets.kt  Server.kt
tcp/: Message.h  README.md  REDAME.md  Readme.md  ioutils.h  protocol_utils.h  serialization.h  utils.h
tcp/client/: .gitignore  CMakeLists.txt  Client.cpp  Client.h  Message.cpp  Message.h  README.md  client.cpp  client.h  main.c  main.cpp
tcp/common/: chat_message.h  util.h
tcp/server/: .gitignore  CMakeLists.txt  Client.cpp  Client.h  Message.cpp  Message.h  Server.cpp  Server.h  ThreadPool.h  accept_loop.cpp  accept_loop.h  blocking_queue.h  client.cpp  client.h  client_container.cpp  client_container.h  client_loop.cpp  client_loop.h  main.c  main.cpp  message.h  server  server.cpp  server.h
tftp/: README.md  build.gradle  packet.go  server.go
tftp/src/: client.go  server.go
tftp/src/client/: client.go
tftp/src/main/java/ru/hse/networks/tftp/: Client.java  Main.java  Server.java  TFTP.java
tftp/src/server/: server.go
tftp/src/tftp/: error.go  mode.go  opcode.go  packet.go
udp/: .gitignore  README.md  Readme.md  build.gradle  client.py  server.py  settings.gradle  tftp.py
udp/client/: build.gradle  client.py  main.py
udp/client/tftpclient/: README.md  build.gradle  settings.gradle
udp/client/tftpclient/gradle/wrapper/: gradle-wrapper.properties
udp/gradle/wrapper/: gradle-wrapper.properties
udp/server/: server.py
udp/server/tftpserver/: README.md  build.gradle  settings.gradle
udp/server/tftpserver/gradle/wrapper/: gradle-wrapper.properties
udp/src/main/java/ru/hsespb/tftp/: AcknowledgementMessage.java  ByteReader.java  Client.java  ClientRequest.java  ClientRequestType.java  DataMessage.java  ErrorMessage.java  ErrorType.java  Main.java  MultiServerThread.java  NetworkService.java  OperationType.java  RequestMessage.java  Server.java  TFTPException.java
udp/src/main/kotlin/ru/hse/anstkras/tftp/: AckPacket.kt  Client.kt  DataPacket.kt  ErrorPacket.kt  Main.kt  Packet.kt  RRQPacket.kt  Server.kt  TFTPUtils.kt  WRQPacket.kt
udp/src/main/kotlin/ru/hse/lyubortk/tftp/: Definitions.kt
udp/src/main/kotlin/ru/hse/tftp/: Main.kt  Properties.kt  RemoteUtil.kt
udp/src/main/kotlin/ru/hse/tftp/client/: Client.kt
udp/src/main/kotlin/ru/hse/tftp/packet/: Packet.kt  ParserUtil.kt
udp/src/main/kotlin/ru/hse/tftp/server/: RequestHandler.kt  Server.kt
(+150 files in other folders)
